[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agcl"
version = "0.1.0"
description = "AGCL: Tool to ask GPT for fixing and suggesting command line"
authors = [
    { name="linnil1" }
]
dependencies = [
    "loguru",
    "openai",
    "questionary",
    "distro",
]
[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
]

[project.scripts]
agcl = "main:main"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = [
    "tests/test.py",
]